# jw_interface_awuniverse

./: .pre-commit-config.yaml  build_depends.repos
.github/: sync-files.yaml
jw_interface_awiv_adapter/: CMakeLists.txt  package.xml
jw_interface_awiv_adapter/include/jw_interface_awiv_adapt_receiver/: jw_interface_awiv_adapt_receiver.hpp
jw_interface_awiv_adapter/include/jw_interface_awiv_adapt_sender/: jw_interface_awiv_adapt_sender.hpp
jw_interface_awiv_adapter/launch/: jw_interface_awiv_adapter.launch.xml
jw_interface_awiv_adapter/node/jw_interface_awiv_adapt_receiver/: jw_interface_awiv_adapt_receiver.cpp
jw_interface_awiv_adapter/node/jw_interface_awiv_adapt_sender/: jw_interface_awiv_adapt_sender.cpp
jw_interface_msgs/: CMakeLists.txt  package.xml
jw_interface_msgs/msg/: CommandStamped.msg  StatusStamped.msg
jw_interface_serial/: CMakeLists.txt  package.xml
jw_interface_serial/include/jw_interface_serial/: jw_interface_serial_core.h  jw_interface_serial_core.hpp
jw_interface_serial/launch/: jw_interface.launch  jw_interface.launch.xml
jw_interface_serial/src/: jw_interface_serial_core.cpp  jw_interface_serial_node.cpp
