<?xml version="1.0"?>
<package>
  <name>jw_interface_msgs</name>
  <version>0.0.0</version>
  <description>The jw_interface_msgs package</description>
  <maintainer email="yamato.ando@gmail.com">Yamato ANDO</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
